<resources>
    <string name="app_name">Mirror</string>
    <string name="AllBrowsing_tv">浏览所有类别</string>
    <string name="allBrowsing_content">显示排序为最新推荐</string>
    <string name="spectacles_tv">浏览平光眼镜</string>
    <string name="item_fragmentallbrowsing_popuwindow_listview_tv">浏览所有分类</string>
    <string name="activity_main_login_tv">登陸</string>
    <string name="activity_register_tv_createnumber">創建帳號</string>
    <string name="activity_register_tv_phonenumber">手機號</string>
    <string name="activity_register_tv_verification">驗證碼</string>
    <string name="activity_register_tv_send_verification">发送验证码</string>
    <string name="activity_register_tv_set_password">設置密碼</string>
    <string name="activity_register_btn_creatnumber">創建帳號</string>
    <string name="login_title_textView_text">帳號登陸</string>
    <string name="login_phoneNumber_textView_text">手機號</string>
    <string name="login_btn_text">登陸</string>
    <string name="login_btn_register">創建帳號</string>
    <string name="login_passWord_textView_text">密碼</string>
    <string name="login_social_textView_text">使用社交帳號</string>
    <string name="activity_product_tv_show">商品細節展示</string>
    <string name="item_product_bottom_description_tv_sliding">滑动浏览详情</string>
    <string name="activity_product_atlas_tv">佩戴图集</string>
    <string name="register_activity_countDownTimer_btn_text">秒后重新发送</string>
    <string name="activity_addaddress_title_tv">添加地址</string>
    <string name="activity_modifyAddAddress_title_tv">修改地址</string>
    <string name="activity_addAddress_number_tv">添加网路电话</string>
    <string name="activity_addaddress_address_tv">添加收货地址</string>
    <string name="activity_addaddress_submitaddress_tv">提交地址</string>
    <string name="activity_modifyaddaddress_submitaddress_tv">保存</string>
    <string name="activity_addAddress_name_tv">添加收件人姓名</string>
    <string name="activity_buyDetails_title_tv">订单详情</string>
    <string name="activity_buyDetails_writeAddress_tv">请填写收件人信息</string>
    <string name="activity_buyDetails_confirmOrder">确认下单</string>
    <string name="activity_buyDetails_writeAddress">填写地址</string>
    <string name="activity_buyDetails_writeAddressTV_text_changeAddressdd">微信支付</string>
    <string name="activity_buyDetails_writeAddressTV_text_changeAddresszhifu">支付宝支付</string>
    <string name="activity_buyDetails_writeAddressTV_text_changeAddress">更改地址</string>
    <string name="activity_buyDetails_writeAddressTV_text_changeAddressm">添加地址</string>
    <string name="activity_buyDetails_writeAddressTV_text_changeAddresk">删除</string>
    <string name="activity_buyDetails_writeAddressTV_text_changeAddresl">我的所有地址</string>
    <string-array name="titles">
        <item>浏览所有分类</item>
        <item>浏览平光眼镜</item>
        <item>浏览太阳眼镜</item>dd
        <item>专题分享</item>
        <item>我的购物车</item>
        <item>返回首页</item>
        <item>退出</item>
    </string-array>


</resources>

