<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_linearLayout_background_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_allItem_horizontal_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title_textView_text"
            android:textColor="@color/login_allTextView_colour"
            android:textSize="@dimen/login_title_textView_size" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/btn_close" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_allItem_horizontal_margin"
        android:background="@mipmap/iv_line_below_create"
        android:orientation="vertical" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_allItem_horizontal_margin"
        android:text="@string/login_phoneNumber_textView_text"
        android:textColor="@color/login_allTextView_colour"
        android:textSize="@dimen/login_phoneNumber_textView_size" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_allItem_horizontal_margin"
        android:background="@mipmap/iv_verification_code"
        android:minLines="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_allItem_horizontal_margin"
        android:text="@string/login_passWord_textView_text"
        android:textColor="@color/login_allTextView_colour"
        android:textSize="@dimen/login_phoneNumber_textView_size" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_allItem_horizontal_margin"
        android:background="@mipmap/iv_verification_code"
        android:minLines="1"
        android:password="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_allItem_horizontal_margin"
        android:background="@mipmap/btn_notavailable"
        android:gravity="center"
        android:text="@string/login_btn_text" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_allItem_horizontal_margin"
        android:background="@drawable/btn_create_selector"
        android:text="@string/login_btn_register" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/login_allItem_horizontal_margin"
            android:text="@string/login_social_textView_text"
            android:textColor="@color/login_allTextView_colour"
            android:textSize="@dimen/login_phoneNumber_textView_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/iv_wechat_icon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/iv_blog_icon" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>

